# table-detect

./: .gitignore  LICENSE  MANIFEST.in  README.md  dev_fetchYolo.py  dev_testscript.py  pyproject.toml  requirements.txt  requirements_build.txt  table-detect.code-workspace
tabledetect/: __init__.py  tabledetect.py
tabledetect/helpers/: __init__.py  args_classes.py  boundigbox_to_cropped_image.py  flatten_list.py  prepData.py  yolo_to_boundingbox.py
tabledetect/resources/examples_visualise/labels/: 2007-05300173-p5_t0.xml  2008-48100204-p4_t0.xml  2015-16800435-p8_t1.xml  2019-12400278-p15_t0.xml  2021-16100585-p27_t0.xml
tabledetect/resources/examples_visualise/tabledetect/labels/: 2007-00300578-p6.txt  2007-00600256-p8.txt  2007-00604546-p3.txt  2018-34400284-p18.txt
tabledetect/resources/examples_visualise/tableparse/labels/: 24b0cff1-2007-05300173-p5_t0.xml  30a7a0c1-2019-12400278-p15_t0.xml  489fd36a-2015-16800435-p8_t1.xml  7864bad2-2008-48100204-p4_t0.xml  bd501af6-2021-16100585-p27_t0.xml
tabledetect/utils/: __init__.py  annotations.py  boundingbox_to_cropped_image.py  convertors.py  data.py  download.py  general.py  prepData.py
